# attn

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README-claude.md  README.md  SPEC.md  TASKS.md  ghostty-vt-native.patch  ghostty-vt-native.pin  go.mod  go.sum
.beads/: .gitignore  deletions.jsonl  issues.jsonl  last-touched
.githooks/: pre-commit
.github/hodor/: v0.3.4-google-vertex.patch  v0.3.4-openrouter.patch
.github/workflows/: bench-ab.yml  ci.yml  pr-review.yml  release-preflight.yml  release.yml
Casks/: attn.rb
Formula/: attn.rb
app/: .gitignore  CLAUDE.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.browser-runtime.config.ts  vite.config.ts
app/e2e/: automation-yaml-editor.spec.ts  binary-pty-output-realpty.spec.ts  fixtures.ts  (+35 more)
app/src-tauri/: Cargo.toml  THIRD_PARTY_NOTICES.md  build.rs  tauri.conf.json  tauri.dev.conf.json
app/src-tauri/capabilities/: default.json  present.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: browser_alerts.rs  browser_host.rs  lib.rs  profile.rs  pty_bridge.rs  pty_manager.rs  thumbs.rs  ui_automation.rs
docs/: CLI.md  CONFIGURATION.md  PR_REVIEW.md  PTY_RENDERING.md  RELEASE.md  TERMINAL_REGRESSION_SCENARIOS.md  TERMINAL_RENDERING_LEARNINGS.md  TERMINAL_TEST_ARCHITECTURE.md  TROUBLESHOOTING.md  USAGE.md  codex-resize-bug-demo.html  diagnostics.md  fe-test-suite-audit.md  glossary.md  native-canvas-arrow-nav.html  notebook-processes.md  notebook-schema.md  notebook-uat.md  perf-testing.md  profiles.md  session-state-specification.md  session-state-testing-strategy.md
native-gpui-archive/: AGENTS.md  README.md
native-ui/: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Package.swift  README.md
native-ui/Sources/AttnNative/App/: AppEnvironment.swift  AttnNativeApp.swift  ClientInstanceLease.swift  WindowPlacementPolicy.swift
native-ui/Sources/AttnNative/Automation/: AutomationProfile.swift  AutomationProtocol.swift  NativeAutomationActions.swift  NativeAutomationServer.swift
native-ui/Sources/AttnNative/Daemon/: DaemonConnection.swift
native-ui/Sources/AttnNative/Protocol/: ProtocolModels.swift
native-ui/Sources/AttnNative/Terminal/: GhosttyRuntime.swift  GhosttyTerminalView.swift  TerminalSurface.swift
native-ui/Sources/AttnNative/Views/: RootWindowView.swift  WorkspaceClosePolicy.swift  WorkspaceNavigationPolicy.swift  WorkspacePaneAppearance.swift  WorkspacePaneTreeView.swift
native-ui/Sources/AttnNative/Views/Launcher/: WorkspaceLauncherModel.swift  WorkspaceLauncherView.swift
native-ui/Tests/AttnNativeTests/: AppEnvironmentTests.swift  AutomationProfileTests.swift  AutomationProtocolTests.swift  ClientInstanceLeaseTests.swift  GhosttyScrollTranslationTests.swift  NativeAutomationActionsTests.swift  ProtocolModelsTests.swift  WindowPlacementPolicyTests.swift  WorkspaceClosePolicyTests.swift  WorkspaceLauncherModelTests.swift  WorkspaceNavigationPolicyTests.swift  WorkspacePaneAppearanceTests.swift
native-ui/crates/attn-native-app/: Cargo.toml
native-ui/crates/attn-native-app/scripts/: perf-real-scroll.py  perf-scroll-zoom.py  perf-sweep.py  scroll-driver.swift
native-ui/crates/attn-native-app/src/: app.rs  canvas.rs  canvas_main.rs  canvas_view.rs  daemon_client.rs  fps_overlay.rs  main.rs  panel.rs  session_list.rs  sidebar.rs  spike4_canvas.rs  spike4_main.rs  spike5_app.rs  spike5_canvas.rs  spike5_main.rs  synthetic.rs  terminal_model.rs  terminal_view.rs  theme.rs  viewport.rs  workspace.rs
native-ui/crates/attn-native-app/src/adapters/: daemon.rs  ghostty.rs  mod.rs  synthetic.rs
native-ui/crates/attn-native-app/src/adapters/automation/: actions.rs  events.rs  manifest.rs  profile.rs  protocol.rs  server.rs
native-ui/crates/attn-native-app/src/automation/: actions.rs  events.rs  server.rs
native-ui/crates/attn-native-app/src/domain/: mod.rs  panel_navigation.rs  panel_placement.rs  panel_snapping.rs  viewport.rs
native-ui/crates/attn-native-app/src/state/: mod.rs  panel.rs  session_registry.rs  store.rs  terminal_model.rs  workspace.rs  workspace_registry.rs
native-ui/crates/attn-native-app/src/views/: canvas.rs  fps_overlay.rs  location_dialog.rs  mod.rs  settings_page.rs  sidebar.rs  terminal_view.rs
native-ui/crates/attn-native-canvas-archive/: Cargo.toml
native-ui/crates/attn-native-canvas-archive/src/adapters/: trackpad_zoom.rs
native-ui/crates/attn-native-canvas-archive/src/adapters/automation/: actions.rs  manifest.rs  mod.rs  profile.rs  server.rs
native-ui/crates/attn-native-canvas-archive/src/domain/: mod.rs
native-ui/crates/attn-native-canvas-archive/src/state/: terminal_model.rs  workspace.rs
native-ui/crates/attn-native-canvas-archive/src/views/: location_dialog.rs  mod.rs  sidebar.rs  terminal_view.rs
native-ui/crates/attn-native-canvas-protocol-archive/: Cargo.toml
native-ui/crates/attn-native-canvas-protocol-archive/src/: commands.rs  types.rs
native-ui/crates/attn-protocol/: Cargo.toml
native-ui/crates/attn-protocol/src/: commands.rs  events.rs  lib.rs  types.rs
scripts/: automation-mock-github.mjs  build-app-profile.sh  build-bundled-plugins.sh  build-libghostty-vt.sh  macos-codesign-identity.sh  pre-commit.sh  publish-libghostty-vt.sh  release.sh  run-native-dev.sh  source-fingerprint.sh  test-go.sh  update-homebrew-formula.sh  version.sh
test/: integration_test.go  run-state-tests.sh  socket_test.sh
(+1729 files in other folders)
