[workspace]
resolver = "2"
members = [
    "crates/attn-protocol",
    "crates/attn-native-app",
]
exclude = [
    "crates/attn-native-canvas-protocol-archive",
    "crates/attn-native-canvas-archive",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
