[package]
name = "attn-native-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "attn-native"
path = "src/main.rs"

[dependencies]
attn-protocol = { path = "../attn-protocol" }
gpui = { version = "0.2.2", features = ["runtime_shaders"] }
gpui-component = "0.5.1"
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
async-tungstenite = { version = "0.34.1", features = ["smol-runtime"] }
async-channel = "2"
smol = "2"
base64 = "0.22"
getrandom = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
raw-window-handle = "0.6"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }
